fix(menu): fix bl on mobile

--- a/battlelogs.css
+++ b/battlelogs.css
@@ -40,16 +40,16 @@ body{
 }
 
 .toggle-button {
-    width: 7vh;
-    height: 7vh;
+    width: fit-content;
+    height: fit-content;
     border-radius: 50%;
     border: none;
     color: #fff;
     font-size: 20px;
     cursor: pointer;
     position: absolute;
-    top: 10px; /* Distance du haut */
-    left: 10px; /* Distance de la droite */
+    top: 70%; /* Distance du haut */
+    left: 0.7%; /* Distance de la droite */
     /*background: url('data:image/svg+xml,<svg width="56" height="56" viewBox="0 0 56 56" fill="%23FFF" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M4.667 16.333A11.667 11.667 0 0 1 16.333 4.667h23.333a11.667 11.667 0 0 1 11.667 11.666v23.333a11.667 11.667 0 0 1-11.666 11.667H16.334A11.667 11.667 0 0 1 4.667 39.667V16.334Zm11.666-7a7 7 0 0 0-7 7v23.333a7 7 0 0 0 7 7.001h23.333a7 7 0 0 0 7.001-7V16.334a7 7 0 0 0-7-7.001H16.334Zm0 30.333a2.333 2.333 0 0 1 2.334-2.333h18.667a2.333 2.333 0 1 1 0 4.667H18.667a2.333 2.333 0 0 1-2.333-2.333Zm3.983-22.65a2.333 2.333 0 1 0-3.299 3.299l5.351 5.351-5.351 5.351a2.333 2.333 0 1 0 3.299 3.299l7-7a2.333 2.333 0 0 0 0-3.299l-7-7Z"/></svg>') no-repeat center;*/
     background-color: rgba(46, 46, 46, 0.1);
     overflow: visible;
@@ -1237,6 +1237,12 @@ button.svg_chat {
 /********************/
 /* Phone            */
 /********************/
+.battlelogs-phone {
+    top: 0px !important;
+    left: 0px !important;
+    height: 100vh !important;
+    width: 100vw !important;
+}
 #battlelogs-phone_expand {
     position: absolute;
     top:0;
